# fofproject

./: .gitignore  automation.py  dianosis.py  playground.py  pyproject.toml
FOFproject/: FundCharacteristics.py  Fund_Characteristics.py  Fund_Graphs.py  patch.diff  playground.py
src/fofproject/: fund.py  mean_variance_optimisation.py  mvo.py  plot.py  portfolio_engine.py  utils.py
