[project]
name = "fofproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "kaleido (>=1.1.0,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pyfonts (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "fofproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
